--- a/styles/style.css
+++ b/styles/style.css
@@ -73,7 +73,7 @@ body {
   background-color: var(--color-background);
   box-sizing: border-box;
   max-width: 1440px;
-  margin: 0;
+  margin: auto;
   padding: 0;
 }
 .page {
